# Canna-Mailroom

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SYSTEM_PROMPT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: ai_agent.py  cli.py  cx_models.py  cx_providers.py  cx_toolset.py  gmail_worker.py  gog_mailbox.py  gog_watcher.py  google_clients.py  google_mailbox.py  mailbox.py  main.py  settings.py  state.py  tools.py
docs/: ARCHITECTURE.md  OPERATIONS.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md  architecture.md  cli-reference.md  data-model.md  deployment.md  faq.md  index.md  operations.md  runtime-and-pipeline.md  security-and-safety.md  testing-and-quality.md
docs/adr/: ADR-001-thread-as-session.md  ADR-002-polling-worker-model.md  ADR-003-sqlite-state-store.md  ADR-004-google-oauth-scope-strategy.md  ADR-005-tool-loop-and-boundaries.md  ADR-006-outbound-reply-idempotency.md
examples/: manual_orders.sample.json  store_knowledge.sample.json
scripts/: auth_google.py
tests/: test_cx_providers.py  test_cx_tooling.py  test_email_agent.py  test_gmail_worker.py  test_settings.py  test_system_prompt.py
